--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
   <head>
     <style>
-      .img-container {
-        text-align: center;
-        display: block;
+      .centered {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        /* bring your own prefixes */
+        transform: translate(-50%, -50%);
       }
     </style>
   </head>
   <body>
-    <span class="img-container"> <!-- Inline parent element -->
+    <span class="centered">
       <img src="logo.png" alt="">
     </span>
   </body>
