--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <style>
-      .centered {
-        max-width: 30%;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        /* bring your own prefixes */
-        transform: translate(-50%, -50%);
+      .box{
+        width: 250px;        
+        border: 5px solid black;
+      }
+      img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block; /* remove extra space below image */
       }
     </style>
   </head>
   <body>
-    <span class="centered">
-      <img src="logo.png" alt="">
-    </span>
+    <div class="box">
+      <img src="logo.png" alt="logo">
+    </div>
   </body>
 </html>
