--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       .box{
         width: 250px;        
         border: 5px solid black;
+        top: 50%;
+        left: 50%;
+        position: fixed;   
       }
       img {
         max-width: 100%;
