--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         border: 5px solid black;
         top: 50%;
         left: 50%;
-        position: fixed;   
+        position: fixed;
+        margin-top: -50px;
+        margin-left: -100px;
       }
       img {
         max-width: 100%;
