--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="box">
-      <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="5000.000000pt" height="4285.000000pt" viewBox="0 0 5000.000000 4285.000000" preserveAspectRatio="xMidYMid meet">
+      <svg xmlns="http://www.w3.org/2000/svg" version="1.0" viewBox="0 0 5000.000000 4285.000000" preserveAspectRatio="xMidYMid meet">
         <metadata>
         Created by potrace 1.14, written by Peter Selinger 2001-2017
         </metadata>
